device: webauthn support.

--- a/examples/webauthn/index.html
+++ b/examples/webauthn/index.html
@@ -2,13 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>U2F Example</title>
+    <title>WebAuthn Ledger Example</title>
   </head>
   <body>
-    <h1>U2F Example</h1>
+    <h1>WebAuthn Ledger Example</h1>
 
-    <!-- Dev Setup -->
-    <script src="/build/vendor.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
